fix hero alignment

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,8 @@ section p {
 #hero div {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 #hero h1 {
